--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "heroku-postbuild": "cd /e-commerce && npm install && npm run build"
+    "heroku-postbuild": "cd e-commerce && npm install && npm run build"
 
   },
   "keywords": [],
